--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     </div>
     <button class="btn btn-default">
       <img src="paw.png" width="20" />
-      Sign In with Facebook
+      Sign In
     </button>
 
-    <div class="mx-auto" style="width: 40%;">
+    <!-- <div class="mx-auto" style="width: 40%;">
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="customCheck1" />
         <label class="custom-control-label" for="customCheck1">MyTask1</label
@@ -84,6 +84,37 @@
         <label class="custom-control-label" for="customCheck2">MyTask2</label
         ><br />
       </div>
+    </div> -->
+    <div class="list">
+      <label>
+        <input type="checkbox" name="" />
+        <i></i>
+        <span> task1</span>
+      </label>
+
+      <label>
+        <input type="checkbox" name="" />
+        <i></i>
+        <span> task2</span>
+      </label>
+      <label>
+        <input type="checkbox" name="" />
+        <i></i>
+        <span> task3</span>
+      </label>
+      <label>
+        <input type="checkbox" name="" />
+        <i></i>
+        <span> tasktasktasktasktasktasktask</span>
+      </label>
+      <label>
+        <input type="checkbox" name="" />
+        <i></i>
+        <span>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.</span
+        >
+      </label>
     </div>
     <script src="js/scripts.js"></script>
   </body>
