--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
         </form>
       </div>
     </div>
-    <button class="btn btn-default">
+
+    <!-- <button class="btn btn-default">
       <img src="paw.png" width="20" />
       Sign In
-    </button>
+    </button> -->
 
     <!-- <div class="mx-auto" style="width: 40%;">
       <div class="custom-control custom-checkbox">
