change color scheme

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: rgba(241, 228, 218,0.4)"
+    >
       <a class="navbar-brand" href="#">ToDoMoew</a>
       <button
         class="navbar-toggler"
@@ -70,7 +73,6 @@
         </form>
       </div>
     </div>
-
     <!-- <button class="btn btn-default">
       <img src="paw.png" width="20" />
       Sign In
